fix: Correct right alignment for search section

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -25,6 +25,9 @@ background: linear-gradient(to right, $primary-color, $secondary-color); /* W3C,
     margin: 1.2rem;
 }
 
+.pr-0-4{
+    padding-right: 0.4rem;
+}
 .text-s{
     font-size: 0.7rem;
 }
